# cat_logger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
cat_logger/: __about__.py  __init__.py  config.py  handlers.py
meowlogs/: __about__.py  __init__.py  config.py  files.py  handlers.py
ready_made_solutions/: cat_logger_class.py  cat_logger_func.py  meowlogs_class.py  meowlogs_func.py  simple_logs_class.py  simple_logs_func.py
ready_made_solutions/cat/: 2025-02-13  2025-02-14
ready_made_solutions/dog/: 2025-02-13  2025-02-14
simple_logs/: config.py  enums.py  files.py  handlers.py
tests/: conftest.py  enums.py  test_config.py  test_files.py  test_handlers.py
